[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oarnet"
version = "2.0.5"
authors = [ { name="Dennis Risen", email="dar5@case.edu" }, ]
description = "Application to real-time poll the OARnet statistics"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Licence :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
              ]
dependencies = [ "pytz", "requests>=2.27",
    "mylib@ git+https://github.com/drisen/mylib",
]

[project.urls]
"Homepage" = "https://github.com/drisen/oarnet"
"Bug Tracker" = "https://github.com/drisen/oarnet/issues"
