[metadata]
name = oarnet
version = 2.0
author = "Dennis Risen"
author_email = "dar5@case.edu"
description = "applicaton to real-time poll the OARnet statistics."
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/drisen/oarnet
project_urls =
    Bug Tracker = https://github.com/drisen/oarnet/issues
classifiers =
    Programming Language :: Python :: 3
    Licence :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src